atcoder/mizuiro/SMBC2019Dluckypin/first/error.txt
  File "<stdin>", line 2
    0224
    ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
